--- a/iPortfolio/index.html
+++ b/iPortfolio/index.html
@@ -206,16 +206,16 @@
               <ul>
                 <li>新北市中和區中正路58號</li>
                 <li>(123) 456-7891</li>
-                <li>alice.barkley@example.com</li>
+                <li>s22464580s@gmail.com</li>
               </ul>
             </div>
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Master of Fine Arts &amp; Graphic Design</h4>
               <h5>2009 - 2013</h5>
-              <p><em>亞東技術學院</em></p>
-              <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
+              <p>亞東技術學院主修工業管理</p>
+              <p>在亞東技術學院主要學習到排成管理</p>
+
             </div>
             <div class="resume-item">
               <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
